# project

./: .gitignore  README.md  SqueezeNet_v1.0  config.cfg.example  init.sh  setup.sh  test.prototxt
caffe/: Makefile
caffe/tools/: cukcf.cpp  cvim.cpp  demo.cpp  demo.cpp~  fast.cpp  fft.cpp  finalrun.cpp  run_tracker.cpp  test  test.cpp
client/: test_server.py
cnntracker/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cnntracker.cpp
database/: __init__.py  cuhk03.py  labeled  vot2013
database/VIPeR/: __init__.py  a.txt  b.txt  cam_a  cam_b  viper.py
database/cuhk03/: __init__.py  cuhk03.py  labeled  labeled.txt
demo/: demo.py  ui.py  video.py
experiment/: __init__.py  test_on_VIPeR.py
layer/: __init__.py  analyse_layer.py  data_layer.py  label_data_layer.py  metric_3_parts_data_layer.py  metric_data_layer.py  ref_layer.py  split_layer.py  test.py  test2.py  test_kcf_layer.py  triplet_data_layer.py  valid_metric_data_layer.py
mysite/: db.sqlite3
mysite/mysite/: settings.py
mysite/polls/: models.py  urls.py  views.py
net/label_cuhk03/: deploy.prototxt  solver.prototxt  train_val.prototxt
net/metric_4_layers/: README  anal.py  anal_test.prototxt  anal_train.prototxt  deploy.prototxt  deploy_1_batch.prototxt  nohup.out  (+4 more)
server/: db.sqlite3  nohup.out  run.sh  test_flask.py
test/: fftw  fftw.cpp  numpy_data.ipynb  test  test.py
tracking/: Makefile  cnn.py  cukcf  cukcf.cu  cukcf.hpp  cutest.cpp  kcf_layer.cpp  kcf_layer.cu  kcf_layer.hpp  tracking.py
util/: __init__.py  crop.py
utils/: check.py  connect_func.py  valid_net.py
(+73 files in other folders)
